Receive XML and DANFE in the webservice - ECW-42 / ECW-43
