# src/main/resources/static/openapi.yaml
@@ -105,25 +105,25 @@ paths:
                 $ref: "#/components/schemas/CustomerCreditDTOList"
 
   /customer-credit/{creditId}:
-      get:
-        tags:
-          - CustomerCredit
-        description: get customer credit from the database
-        operationId: getCustomerCreditById
-        parameters:
-          - name: creditId
-            in: path
-            description: customerCredit id
-            required: true
-            schema:
-              $ref: "#/components/schemas/Identifier"
-        responses:
-          200:
-            description: Customer credit successfully retrieved
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/CustomerCreditDTO"
+    get:
+      tags:
+        - CustomerCredit
+      description: get customer credit from the database
+      operationId: getCustomerCreditById
+      parameters:
+        - name: creditId
+          in: path
+          description: customerCredit id
+          required: true
+          schema:
+            $ref: "#/components/schemas/Identifier"
+      responses:
+        200:
+          description: Customer credit successfully retrieved
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CustomerCreditDTO"
 
   ### Customer Address that has been generated by some returns, for instance
   /customer-address:
@@ -370,64 +370,106 @@ paths:
               schema:
                 $ref: "#/components/schemas/CustomerOrderReportDTO"
 
+  /customer-order/danfe:
+    post:
+      tags:
+        - CustomerOrder
+      description: post a customer order NFe Danfe into the database
+      operationId: saveCustomerOrderNFeDanfe
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: "#/components/schemas/CustomerOrderNFeDTO"
+      responses:
+        201:
+          description: Customer order detail successfully created
+          content:
+            application/json:
+              schema:
+                type: string
+  /customer-order/xml:
+    post:
+      tags:
+        - CustomerOrder
+      description: post a customer order NFe Danfe into the database
+      operationId: saveCustomerOrderNFeXml
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              $ref: "#/components/schemas/CustomerOrderNFeDTO"
+      responses:
+        201:
+          description: Customer order detail successfully created
+          content:
+            application/json:
+              schema:
+                type: string
+
 components:
   schemas:
-  ### Complex types
+    ### Complex types
     Double:
       type: number
       format: double
     Instant:
       type: string
       format: date-time
-
     Identifier:
       type: string
       format: uuid
 
-  ### Objects
+    File:
+      type: string
+      format: binary
+
+    ### Objects
     CustomerDataDTOList:
       type: array
       items:
         $ref: "#/components/schemas/CustomerDataDTO"
     CustomerDataDTO:
-        type: object
-        properties:
-          id:
-            $ref: "#/components/schemas/Identifier"
-          cnpjEmpresa:
-              type: string
-          codcli:
-            type: string
-          nomcli:
-            type: string
-          apecli:
-            type: string
-          cgccli:
-            type: string
-          inscli:
-            type: string
-          nomregtrib:
-            type: string
-          clidev:
-            type: string
-          cifcli:
-            type: string
-          uffcli:
-            type: string
-          codven:
-            type: string
-          cnae:
-            type: string
-          indicEstrangeiro:
-            type: string
-          tipoIndicacaoIe:
-            type: string
-          inscMunicipal:
-            type: string
-          obscli:
-            type: string
-          indicIe:
-            type: integer
+      type: object
+      properties:
+        id:
+          $ref: "#/components/schemas/Identifier"
+        cnpjEmpresa:
+          type: string
+        codcli:
+          type: string
+        nomcli:
+          type: string
+        apecli:
+          type: string
+        cgccli:
+          type: string
+        inscli:
+          type: string
+        nomregtrib:
+          type: string
+        clidev:
+          type: string
+        cifcli:
+          type: string
+        uffcli:
+          type: string
+        codven:
+          type: string
+        cnae:
+          type: string
+        indicEstrangeiro:
+          type: string
+        tipoIndicacaoIe:
+          type: string
+        inscMunicipal:
+          type: string
+        obscli:
+          type: string
+        indicIe:
+          type: integer
     CustomerCreditDTOList:
       type: array
       items:
@@ -741,3 +783,14 @@ components:
           type: string
         clsipi:
           type: string
+    CustomerOrderNFeDTO:
+      type: object
+      properties:
+        cnpjEmpresa:
+          type: string
+        codcli:
+          type: string
+        numres:
+          type: string
+        nfe:
+          $ref: "#/components/schemas/File"
